Ran lint and prettier
